Fixing layout issues - About

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -2,6 +2,7 @@
 	margin: 50px auto;
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
+	height: 30vh;
 	.vision {
 		margin-top: 50px;
 	}
@@ -10,9 +11,9 @@
 .tutors {
 	width: 100%;
 	background-color: #2196f3;
-	padding-top: 50px;
-	text-align: center;
+	padding: 50px;
 	h1 {
+		text-align: center;
 		color: white;
 	}
 }
